# stellar-defi-toolkit

./: .env.example  .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  check_output.txt  check_output_v14.txt  check_output_v15.txt  check_output_v16.txt  check_results_v10.txt  final_check_output.txt  final_check_output_v2.txt  final_check_output_v3.txt  final_check_output_v4.txt  final_check_output_v5.txt  final_check_output_v6.txt  final_test_output.txt  final_test_output_v2.txt  final_test_output_v3.txt  final_test_results.txt  final_test_results_v9.txt  status_check_v19.txt
docs/: flash_loan.md  stablecoin_economic_model.md  synthetic_protocol_risk_management.md
examples/: liquidity_pool.rs  multi_asset_price_feeds.rs  stablecoin_demo.rs  staking.rs  synthetic_protocol_demo.rs  token_deployment.rs  yield_vault.rs
src/: lib.rs  main.rs
src/api/: aggregations.rs  loaders.rs  mod.rs  resolvers.rs  schema.rs  types.rs
src/contracts/: arbitrage.rs  asset_registry.rs  flash_loan.rs  governance.rs  governance_v2.rs  lending.rs  liquidity_pool.rs  lp_token_storage.rs  mod.rs  multi_asset_oracle.rs  oracle.rs  oracle_manager.rs  pausable_token.rs  position_manager.rs  price_feed_adapters.rs  price_oracle.rs  soroban_token_contract.rs  stability_pool.rs  stablecoin.rs  staking.rs  synthetic_governance.rs  synthetic_protocol.rs  token.rs  token_metadata_support.rs  vault.rs
src/types/: asset.rs  flash_loan.rs  lending.rs  mod.rs  pool.rs  stablecoin.rs  strategy.rs  synthetic.rs  token.rs  vault.rs
src/utils/: client.rs  fixed_point.rs  helpers.rs  mod.rs
staking/src/: storage.rs
test_snapshots/contracts/flash_loan/tests/: test_arbitrage_safeguard.1.json  test_calculate_fee.1.json  test_flash_loan_success.1.json  test_flash_loan_zero_fails.1.json  test_initialization.1.json  test_liquidate_with_flash_loan.1.json  test_pause_resume.1.json  test_reentrancy_protection.1.json
tests/: integration_tests.rs
